--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <button class="button">
             <span class="button_lg">
                 <span class="button_sl"></span>
-                <span class="button_text"><a href="pág2/index.html" style="color: inherit; text-decoration: none;">Próxima Página</a></span>
+                <span class="button_text">Próxima Página</span>
             </span>
         </button>
     </main>
