Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -11,28 +11,15 @@
 <body>
     <main>
 
-        <p>Ao reler as palavras que fluíram do meu coração, encontrei nelas a expressão mais verdadeira do que você
-            representa para mim. Cada frase, cada sentimento expresso, é apenas uma pequena amostra do amor que
-            transborda em mim por você.</p>
+        <p>Desde o primeiro momento em que nossos olhos se encontraram, percebi que minha vida nunca mais seria a mesma. Cada dia ao seu lado é uma nova aventura, uma oportunidade de descobrir o quanto te amo e o quanto sou grato por ter você comigo.</p>
 
-        <p>Desde o momento em que nossos caminhos se cruzaram, minha vida ganhou novas cores, novos significados. Você
-            trouxe consigo uma luz radiante que iluminou os cantos mais escuros da minha existência, e desde então, cada
-            dia ao seu lado tem sido uma bênção.</p>
+        <p>Seu sorriso ilumina meus dias, seu toque me traz paz, e sua presença transforma qualquer momento em algo especial. A sua maneira de enxergar o mundo e a sua alma criativa me inspiram a ser uma pessoa melhor a cada dia. Admiro seu talento, sua inteligência e, acima de tudo, a sua bondade.</p>
 
-        <p>Nossas histórias se entrelaçaram de maneira tão bela, como se estivéssemos destinados a caminhar juntos desde
-            o início dos tempos. Seus sorrisos são os raios de sol que aquecem minha alma, e seus olhos são o farol que
-            me guia em meio às tempestades da vida.</p>
+        <p>Neste Dia dos Namorados, quero reafirmar o meu compromisso de estar ao seu lado, de ser seu apoio, seu amante, e seu melhor amigo. Nosso amor é um presente precioso, e farei de tudo para que ele cresça e floresça sempre.</p>
 
-        <p>Quando olho para você, vejo não apenas a pessoa incrível que é, mas também o futuro que sonhamos construir
-            juntos. Uma jornada repleta de amor, cumplicidade e sonhos realizados. Você é minha âncora nos dias
-            turbulentos e minha asa nos momentos de voar alto.</p>
-
-        <p>
-            Hoje, neste Dia dos Namorados, quero que saiba o quanto você é especial para mim. Cada palavra escrita nesta
-            carta é um eco do amor que sinto por você, um amor que transcende o tempo e o espaço. Que este dia seja
-            apenas o começo de uma eternidade de amor, felicidade e companheirismo. <br>
+        <p>Que este dia seja apenas mais um capítulo lindo na nossa história, cheio de amor e sonhos compartilhados. Você é a melodia da minha vida e a razão do meu sorriso. <br>
             Com todo o meu amor, <strong>Lauan Henrique</strong>.
-        </p>
+</p>
         <button class="button">
             <span class="button_lg">
                 <span class="button_sl"></span>
