Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <p>Neste Dia dos Namorados, quero reafirmar o meu compromisso de estar ao seu lado, de ser seu apoio, seu amante, e seu melhor amigo. Nosso amor é um presente precioso, e farei de tudo para que ele cresça e floresça sempre.</p>
 
-        <p>Que este dia seja apenas mais um capítulo lindo na nossa história, cheio de amor e sonhos compartilhados. Você é a melodia da minha vida e a razão do meu sorriso. <br>
+        <p>Que este dia seja apenas mais um capítulo lindo na nossa história, cheio de amor e sonhos compartilhados. <br>
             Com todo o meu amor, <strong>Lauan Henrique</strong>.
 </p>
         <button class="button">
