Atualizar o index.html

--- a/pág2/index.html
+++ b/pág2/index.html
@@ -50,8 +50,7 @@
                 como você. Seus lábios macios e seus cabelos cacheados, minha cacheada, fazem de você minha garotinha. Cada
                 loucura que a gente tem, os mesmos surtos, e em pensar que somos parecidos em muitas coisas, isso é uma
                 loucura. Você tem uma beleza delicada e suave, acentuada por seus cabelos cacheados e escuros que emolduram
-                seu rosto de maneira encantadora. Seus olhos são grandes e expressivos, dando um ar introspectivo e profundo
-                ao seu olhar. Seus lábios cheios, de um tom rosado natural, complementam perfeitamente sua pele clara e
+                seu rosto de maneira encantadora. Quando olho nos seus olhos, testemunho a poesia do universo desdobrando-se diante de mim, onde cada centelha de luz é uma constelação de sentimentos entrelaçados, cada piscar é um diálogo entre almas navegando nos mares da existência. Seus lábios cheios, de um tom rosado natural, complementam perfeitamente sua pele clara e
                 macia.
             </p>
 
