Atualizar o index.html

--- a/pág2/index.html
+++ b/pág2/index.html
@@ -77,8 +77,7 @@
             <p>
                 Amo a forma como você me compreende, mesmo quando nem eu consigo entender a mim mesmo. Amo seu toque suave,
                 que me traz paz e segurança. Amo suas palavras, que sempre sabem como me acalmar e me animar. Amo seu
-                sorriso, que ilumina meus dias e aquece meu coração. E amo como você coloca a música em nossa vida, seja
-                cantando junto com suas canções favoritas ou simplesmente relaxando enquanto ouvimos juntos. Quando me sinto
+                sorriso, que ilumina meus dias e aquece meu coração. Quando me sinto
                 com a mente perdida, pego-me lembrando de você, das suas risadas e dos seus olhares encantadores. Então
                 percebo que você é a garota mais perfeita.
             </p>
